fix: Increase z-index of content sidebar https://github.com/RadeonOpenCompute/rocm-docs-core/issues/396

--- a/src/rocm_docs/rocm_docs_theme/static/custom.css
+++ b/src/rocm_docs/rocm_docs_theme/static/custom.css
@@ -216,3 +216,7 @@ a#ot-sdk-btn {
     transform: rotate(0);
   }
 }
+
+.bd-sidebar-secondary {
+  z-index: 10001;
+}
